# contextwell

./: .gitignore  AGENTS.md  Cargo.toml  IMPROVEMENTS.md  LAZYCONFS.md  README.md  SKILL.md  TODO.md  mcp-config.example.json  pyproject.toml
.github/: copilot-setup-steps.yml
.github/workflows/: quality.yml
python/contextwell/: __init__.py  __main__.py  _core.cp312-win_amd64.pyd  bm25.py  chunker.py  embedder.py  embedder_openai.py  export.py  file_import.py  markdown_import.py  project.py  reranker.py  schema.py  server.py  store.py
src/: lib.rs
tests/: test_integration.py  test_markdown_import.py
